# personal_website

./: .gitignore  CMakeLists.txt  shader.glsl
docs/: emain.html  emain.js  emain.wasm  index.html
src/: main.c  main.html  main.js  main.wasm  main_v0.c  ocean_vert.glsl  script.js  shader.glsl  shell.html
web_page/: main.c  main.html  main.js  main.wasm  shell.html
web_pge/: emain.c  shell.html
